--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Neamar/riot-lol-api.git"
+    "url": "git+https://github.com/iaace-NA/riot-lol-api.git"
   },
   "author": "Neamar",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Neamar/riot-lol-api/issues"
+    "url": "https://github.com/iaace-NA/riot-lol-api/issues"
   },
-  "homepage": "https://github.com/Neamar/riot-lol-api#readme",
+  "homepage": "https://github.com/iaace-NA/riot-lol-api#readme",
   "dependencies": {
     "agentkeepalive": "^3.4.1",
     "async": "^2.6.0",
